--- a/package.json
+++ b/package.json
@@ -3,22 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "cors": "^2.8.5",
-    "env-cmd": "^10.1.0",
-    "express": "^4.17.3",
     "moment": "^2.29.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-magnifier": "^3.0.4",
     "react-scripts": "5.0.0",
     "reactive-button": "^1.3.12",
     "styled-components": "^5.3.5",
@@ -26,12 +24,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "client:dev": "npx webpack --watch ./src",
-    "build:dev": "webpack --config webpack.dev.js --watch ./src",
-    "build:prod": "webpack --config webpack.prod.js",
-    "build:staging": "env-cmd -f .env.staging npm run build",
-    "server:dev": "env-cmd -f .env.staging  npx nodemon --watch server/  node server/app.js",
-    "server:start": "env-cmd -f .env.staging  node server/app.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,18 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.5.0",
-    "babel-loader": "^8.2.4",
-    "nodemon": "^2.0.15",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
   }
 }
