--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "moment": "^2.29.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
